Attempted to fix overflow issues and mobile CSS stuff

--- a/style/style.css
+++ b/style/style.css
@@ -12,16 +12,24 @@
 html,
 body 
 {
-    min-height: 100%;
-
     margin: 0;
-
-    overflow: hidden;
 
     font-family: "Times New Roman";
 
+    scrollbar-width: none;
+
     background: #ffffff;
     color: #ffffff;
+}
+
+#body-container
+{
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    background-image: url("/img/main-bg.gif");
 }
 
 @keyframes marquee 
@@ -88,18 +96,17 @@ body
 
 header 
 {
-    display: inline-block;
-
     position: relative;
     top: 0;
 
     width: 100%;
-    min-height: 5rem;
+    height: max-content;
 }
 
 #header-wrapper
 {
     width: 100%;
+    height: fit-content;
 
     overflow: hidden;
 
@@ -115,19 +122,17 @@ header
 
 #nav-container
 {
-    display: inline-block;
-    
     position: relative;
     top: 0;
 
     width: 100%;
-    min-height: 1rem;
+    height: max-content;
 }
 
 #nav-wrapper
 {
     width: 100%;
-    height: auto;
+    height: fit-content;
 
     white-space: nowrap;
     overflow: hidden;
@@ -199,20 +204,20 @@ header
 
 footer 
 {
-    display: block;
+    position: sticky;
+    margin-top: auto;
 
-    position: absolute;
     bottom: 0;
 
     width: 100%;
-    min-height: 5rem;
+    height: max-content;
 }
 
 #footer-wrapper
 {
     width: 100%;
+    height: fit-content;
 
-    white-space: nowrap;
     overflow: hidden;
     box-sizing: border-box;
 
@@ -242,22 +247,14 @@ footer
 
 #page-container 
 {
-    display: inline-block;
-
     position: relative;
 
     width: 100%;
-    height: 100vh;
+    height: max-content;
 
-    overflow: hidden;
-    overflow-y: scroll;
-    box-sizing: content-box !important;
+    overflow-y: auto !important;
 
-    scrollbar-width: thin;
-    scrollbar-color: #FAFA33 rgba(0, 0, 0, 0);
-    scrollbar-gutter: stable both-edges;
-
-    background-image: url("/img/main-bg.gif");
+    box-sizing: border-box !important;
 }
 #page-container::-webkit-scrollbar
 {
@@ -279,7 +276,6 @@ footer
 {
     margin: auto;
     padding: 2rem;
-    padding-bottom: 18rem;
 
     color: #FAFA33;
     text-shadow: 1px 1px #0FFF50;
@@ -356,6 +352,8 @@ footer
     display: block;
     float: center;
 
+    white-space: normal !important;
+
     width: 100%;
     height: 100%;
 
@@ -385,6 +383,7 @@ footer
     color: #fff;
     text-shadow: 1px 1px #000;
     text-align: center;
+    text-wrap: pretty !important;
 }
 
 .column #panel a
@@ -392,6 +391,8 @@ footer
     color: #ff0;
     text-shadow: 1px 1px #000;
     text-align: center;
+    text-wrap: wrap !important;
+    word-break: break-all !important;
 }
 .column #panel a:hover
 {
@@ -403,6 +404,10 @@ footer
     text-shadow: 1px 1px #00f;
 }
 
+.row
+{
+    height: 100%;
+}
 .row::after
 {
     display: table;
@@ -423,31 +428,38 @@ footer
 }
 
 /* Mobile */
-@media screen and (max-width: 600px)
+@media screen and (max-width: 700px)
 {
+    footer
+    {
+        position: relative;
+        bottom: 0;
+    }
+
+    #footer-wrapper
+    {
+        padding: 0;
+        padding-bottom: 0 !important;
+    }
+
     .column
     {
         width: 100%;
+        height: 100%;
         padding: 0;
     }
 
     #nav-wrapper li {
         display: block;
     }
-
     #nav-wrapper a
     {
-        font-size: x-large;
+        font-size: medium;
     }
 
     #headsmash
     {
-        width: 0;
-    }
-
-    #content-wrapper 
-    {
-        padding-bottom: 28rem;
+        display: none;
     }
 
     #music-button-wrapper 
